<resources>
    <string name="app_name">Bicycle Rental</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="validEmail">Please enter valid e-mail</string>
    <string name="btnSubmit">Submit</string>
    <string name="rentalPoints">Rental list</string>
    <string name="rentalMap">Rental map</string>
    <string name="account">Account</string>
    <string name="title_activity_account">@string/account</string>
    <string name="title_activity_main">Home</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reserve">Reserve</string>
    <string name="no_such_user">User don`t exist</string>
    <string name="no_reservations">No reservations</string>

</resources>
